[gd_scene load_steps=6 format=3 uid="uid://dke11n1natt5h"]

[ext_resource type="Script" uid="uid://codn2epgee73v" path="res://scripts/control.gd" id="1_5p55f"]
[ext_resource type="Texture2D" uid="uid://cfxwr4ik6kd5j" path="res://sprites/sukuna/mahoraga/parts/1762026177448.jpg" id="2_r67kn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_brbbq"]
texture = ExtResource("2_r67kn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8n18e"]
bg_color = Color(0, 0.00392157, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjwpk"]
bg_color = Color(0, 0, 0, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5p55f")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_brbbq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -68.5
offset_right = 145.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_8n18e")
text = "START
"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_tjwpk")
text = "QUIT
"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
